--- a/src/assest/styles/components/backoffice/_stay-edit.scss
+++ b/src/assest/styles/components/backoffice/_stay-edit.scss
@@ -1,8 +1,13 @@
 .stay-edit {
   .selection-container {
-    flex-direction: column;
-    gap: 20px;
-    margin-inline-end: 40px;
+    flex-direction: row;
+    gap: 30px;
+    align-items: center;
+    flex-wrap: wrap;
+    @include for-narrow-layout {
+      flex-direction: column;
+      gap: 20px;
+    }
     > *:not(label) {
       color: $clr3;
       padding: 10px;
@@ -17,7 +22,7 @@
     }
 
     .input-container {
-      label{
+      label {
         cursor: pointer;
       }
       input {
@@ -53,27 +58,46 @@
 
   .info-container {
     display: flex;
+    flex-direction: column-reverse;
     margin-block-end: 30px;
+    width: 100%;
+    gap: 25px;
+    @include for-narrow-layout {
+      flex-direction: row;
+      gap: 40px;
+    }
 
     .summary-container {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-
+      @include for-narrow-layout {
+        width: 0;
+        flex: 1; 
+      }
+      
       textarea {
         border-radius: 12px;
-        height: 30vh;
+        height: 20vh;
         padding: 24px;
         line-height: 2;
-        margin-block-end: 40px;
-        width: unset;
+        width: 100%;
+        margin-block-end: 10px;
+        @include for-narrow-layout {
+          height: 30vh;
+          margin-block-end: 30px;
+        }
       }
 
       .stay-edit-amenities {
-      display: grid;
-      grid-column: 2;
-      justify-items: baseline;
-      gap: 10px;
+        display: grid;
+        grid-column: 2;
+        justify-items: baseline;
+        gap: 10px;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        @include for-narrow-layout {
+          grid-template-columns: repeat(2, minmax(100px, 1fr));
+        }
+        @include for-normal-layout {
+          grid-template-columns: repeat(3, minmax(100px, 1fr));
+        }
 
         .amenity-checkbox {
           flex-wrap: nowrap;
@@ -144,7 +168,7 @@
       }
     }
   }
-  .btn-container{
+  .btn-container {
     margin: auto;
     width: 20%;
     min-width: 100px;
