--- a/src/assest/styles/components/backoffice/_host-stays.scss
+++ b/src/assest/styles/components/backoffice/_host-stays.scss
@@ -1,20 +1,70 @@
 .host-stay-container {
-    border-radius: 8px;
-    .table-headers {
-        display: grid;
-        grid-template-columns: repeat(7,minmax(100px,1fr));
-        // justify-content: space-between;
-        background-color: $clr8;
-        padding: 10px;
-        padding-inline-start: 30px;
-        align-items: center;
-    }
+  border-radius: 8px;
+  .table-headers {
+    display: grid;
+    grid-template-columns: repeat(7, minmax(100px, 1fr));
+    // justify-content: space-between;
+    background-color: $clr8;
+    padding: 10px;
+    padding-inline-start: 30px;
+    align-items: center;
+  }
 
-    .host-stay-info {
-        // justify-content: space-between;
-        display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
-        box-shadow: 0 1px 0 $clr8;
-        padding: 10px;
+  .host-stay-info {
+    // justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    box-shadow: 0 1px 0 $clr8;
+    padding: 10px;
+  }
+
+  .confirm-delete-container {
+    .confirm-delete-text {
+      margin-block-end: 24px;
+      font-size: rem(18px);
+      text-align: center;
+      .delete-permanently {
+        font-family: f-bold;
+        text-decoration: underline;
+      }
     }
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%, 0);
+    z-index: 10;
+    color: $clr4;
+    padding: 30px;
+    background-color: $clr5;
+    border: 3px solid $clr1;
+    border-radius: 8px;
+    div {
+      justify-content: space-around;
+      .confirm-delete,
+      .decline-delete {
+        // width: 80px;
+        text-align: center;
+        font-family: f-medium;
+        cursor: pointer;
+        border-radius: 4px;
+        padding: 7px 40px;
+        background-color: $clr1;
+        color: $clr5;
+        &:hover {
+          //   background-color: $clr1;
+          //   color: $clr5;
+          opacity: 0.7;
+        }
+      }
+      .decline-delete {
+        color: $clr5;
+        background-color: $clr12;
+        &:hover {
+          //   background-color: $clr1;
+          //   color: $clr5;
+          opacity: 0.7;
+        }
+      }
+    }
+  }
 }
