--- a/src/assest/styles/components/backoffice/_host-stays.scss
+++ b/src/assest/styles/components/backoffice/_host-stays.scss
@@ -25,52 +25,56 @@
       text-overflow: ellipsis;
     }
   }
+}
 
-  .confirm-delete-container {
-    .confirm-delete-text {
+.confirm-delete-container {
+  .confirm-delete-text {
+    font-size: rem(18px);
+    text-align: center;
+    .delete-permanently {
       margin-block-end: 24px;
-      font-size: rem(18px);
-      text-align: center;
-      .delete-permanently {
-        font-family: f-bold;
-        text-decoration: underline;
-      }
-      position: absolute;
-      left: 50%;
-      top: 20%;
-      transform: translate(-50%, 0);
-      z-index: 10;
-      color: $clr4;
-      padding: 30px;
-      background-color: $clr5;
-      border: 3px solid $clr1;
-      border-radius: 8px;
-      div {
-        justify-content: space-around;
-        .confirm-delete,
-        .decline-delete {
-          // width: 80px;
-          text-align: center;
-          font-family: f-medium;
-          cursor: pointer;
-          border-radius: 4px;
-          padding: 7px 40px;
-          background-color: $clr1;
-          color: $clr5;
-          &:hover {
-            //   background-color: $clr1;
-            //   color: $clr5;
-            opacity: 0.7;
-          }
+      font-family: f-bold;
+      text-decoration: underline;
+    }
+    p {
+      margin-bottom: 25px;
+    }
+
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%, 0);
+    z-index: 10;
+    color: $clr4;
+    padding: 30px;
+    background-color: $clr5;
+    border: 3px solid $clr1;
+    border-radius: 8px;
+    div {
+      justify-content: space-around;
+      .confirm-delete,
+      .decline-delete {
+        // width: 80px;
+        text-align: center;
+        font-family: f-medium;
+        cursor: pointer;
+        border-radius: 4px;
+        padding: 7px 40px;
+        background-color: $clr1;
+        color: $clr5;
+        &:hover {
+          //   background-color: $clr1;
+          //   color: $clr5;
+          opacity: 0.7;
         }
-        .decline-delete {
-          color: $clr5;
-          background-color: $clr12;
-          &:hover {
-            //   background-color: $clr1;
-            //   color: $clr5;
-            opacity: 0.7;
-          }
+      }
+      .decline-delete {
+        color: $clr5;
+        background-color: $clr12;
+        &:hover {
+          //   background-color: $clr1;
+          //   color: $clr5;
+          opacity: 0.7;
         }
       }
     }
