--- a/src/assest/styles/components/stay-details/stay-reserve.scss
+++ b/src/assest/styles/components/stay-details/stay-reserve.scss
@@ -17,7 +17,9 @@
 
 .order-form-header {
   margin-block-start: 10px;
-  display: flex;
+  @include for-narrow-layout {
+    display: flex;
+  }
   align-items: center;
   justify-content: space-between;
   width: 100%;
@@ -44,6 +46,8 @@
   margin-bottom: 15px;
 
   label {
+    width: 100%;
+    word-wrap: break-word;
     text-align: left;
     font-weight: 600;
     font-size: 0.75em;
@@ -51,8 +55,10 @@
 }
 
 .date-picker {
-  display: flex;
-  justify-content: space-between;
+  @include for-tablet-layout {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .date-input {
@@ -60,9 +66,18 @@
   flex-direction: column;
   gap: 5px;
   padding: 7px 12px;
+  z-index: -99999999;
   &:last-of-type {
-    border-left: 1px solid #00000050;
+    border-top: 1px solid #00000050;
   }
+
+  @include for-tablet-layout {
+    &:last-of-type {
+      border-left: 1px solid #00000050;
+      border-top: 0px;
+    }
+  }
+
   :hover {
     cursor: pointer;
   }
@@ -106,6 +121,7 @@ span.reviews {
 }
 
 .btn-container {
+  font-size: 14px;
   position: relative;
   width: 100%;
   height: 48px;
@@ -145,6 +161,10 @@ span.reviews {
 .content {
   span {
     color: $clr5 !important ;
+    font-size: rem(12px);
+    @include for-narrow-layout {
+      font-size: rem(16px);
+    }
   }
   --positionX: 0;
   --positionY: 5;
