--- a/src/assest/styles/pages/_home-page.scss
+++ b/src/assest/styles/pages/_home-page.scss
@@ -4,14 +4,18 @@
     position: absolute;
     font-family: f-book;
     color: $clr5;
-    padding: 50px;
     bottom: 0;
-    width: 56%;
+    width: 65%;
+    padding: 16px;
+    font-size: 1rem;
     z-index: 1;
-    // text-shadow: 0 0 2px black;
     letter-spacing: -0.02em;
-    font-size: rem(32px);
     pointer-events: none;
+    @include for-tablet-layout {
+      font-size: rem(32px);
+      width: 56%;
+      padding: 50px;
+    }
   }
 
   .hero-container {
@@ -40,8 +44,12 @@
     .card-container {
       display: grid;
       grid-auto-flow: dense;
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(2, minmax(100px, 1fr));
+      gap: 15px;
+      @include for-narrow-layout {
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        gap: 20px;
+      }
 
       .img-container {
         aspect-ratio: 1;
@@ -60,10 +68,6 @@
           font-family: f-book;
         }
       }
-    }
-    > div {
-      // height: 200px;
-      // width: 200px;
     }
   }
   .city-container {
