--- a/src/assest/styles/components/review-list/review-list.scss
+++ b/src/assest/styles/components/review-list/review-list.scss
@@ -1,22 +1,75 @@
 .review-list {
-    margin:20px 0px;
+    margin: 20px 0px;
     .review-list-header {
         font-size: rem(18px);
         font-family: f-light;
         display: flex;
-        gap:10px;
+        gap: 10px;
         img {
-            width: 18px;      
-            filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg)
-            brightness(100%) contrast(103%);
+            width: 18px;
+            filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg) brightness(100%) contrast(103%);
         }
     }
 
-    .reviews-container{
+    .review-ratings-avg-container {
+        margin: 20px 0px;
+        font-family: f-light;
+        font-size: rem(16px);
+        display: flex;
+        gap: 10%;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        .review-ratings-avg-holder {
+            display: flex;
+            flex-direction: column;
+            margin-right: 10%;
+        }
+        .review-ratings-avg {
+            display: flex;
+            align-items: center;
+            padding: 5px 0px;
+
+            :first-child {
+                width: 130px;
+            }
+
+            .graph-review {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+            }
+
+            .review-avg-full-width {
+                position: relative;
+                width: 140px;
+                height: 3px;
+                background-color: $clr7;
+
+                .review-avg-width {
+                    position: absolute;
+                    height: 3px;
+                    z-index: 100;
+                    left: 0;
+                    background-color: $clr2;
+                }
+            }
+
+            span {
+                font-family: f-medium;
+                font-size: rem(12px);
+                color: $clr2;
+                margin-left: 8px;
+                width: 20px;
+            }
+        }
+    }
+
+    .reviews-container {
         display: flex;
         flex-wrap: wrap;
-        .review-card{
-            width:50%;
+        .review-card {
+            width: 50%;
         }
     }
 }
