--- a/src/assest/styles/components/backoffice/_host-stays.scss
+++ b/src/assest/styles/components/backoffice/_host-stays.scss
@@ -1,82 +1,107 @@
 .host-stay-container {
-  border-radius: 8px;
-  .table-headers {
-    display: grid;
-    grid-template-columns: repeat(7, minmax(100px, 1fr));
-    // justify-content: space-between;
-    background-color: $clr8;
-    padding: 10px;
-    padding-inline-start: 30px;
-    align-items: center;
-  }
-
-  .host-stay-info {
-    align-items: center;
-    justify-items: center;
-    // justify-content: space-between;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-    box-shadow: 0 1px 0 $clr8;
-    padding: 10px;
-
-    div {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    border-radius: 8px;
+    .table-headers {
+        display: grid;
+        grid-template-columns: repeat(7, minmax(100px, 1fr));
+        background-color: $clr12;
+        border-radius: 5px;
+        padding: 10px;
+        justify-items: center;
     }
-  }
+
+    .host-stay-info {
+        display: grid;
+        justify-items: center;
+        grid-template-columns: repeat(7, minmax(50px, 1fr));
+        box-shadow: 0 1px 0 $clr8;
+        padding: 5px 0px 5px 10px;
+        align-items: center;
+        font-size: rem(14px);
+        color: $clr3;
+        div {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            &:first-of-type {
+                width: 100%;
+            }
+            &:last-of-type {
+                cursor: pointer;
+                background-color: $clr1;
+                padding: 5px 10px;
+                border-radius: 8px;
+                border: 1px solid $clr5;
+                transition: 0.3s;
+                color: $clr5;
+                justify-self: end;
+                &::before {
+                    content: "X";
+                }
+                @include for-tablet-layout {
+                    &::before {
+                        content: "Remove stay";
+                    }  
+                }
+                &:hover {
+                    border: 1px solid $clr2;
+                    background-color: #ff385ccf;
+                    transition: 0.3s;
+                }
+            }
+        }
+    }
 }
 
 .confirm-delete-container {
-  .confirm-delete-text {
-    font-size: rem(18px);
-    text-align: center;
-    .delete-permanently {
-      margin-block-end: 24px;
-      font-family: f-bold;
-      text-decoration: underline;
-    }
-    p {
-      margin-bottom: 25px;
-    }
-
-    position: absolute;
-    left: 50%;
-    top: 20%;
-    transform: translate(-50%, 0);
-    z-index: 10;
-    color: $clr4;
-    padding: 30px;
-    background-color: $clr5;
-    border: 3px solid $clr1;
-    border-radius: 8px;
-    div {
-      justify-content: space-around;
-      .confirm-delete,
-      .decline-delete {
-        // width: 80px;
+    .confirm-delete-text {
+        font-size: rem(18px);
         text-align: center;
-        font-family: f-medium;
-        cursor: pointer;
-        border-radius: 4px;
-        padding: 7px 40px;
-        background-color: $clr1;
-        color: $clr5;
-        &:hover {
-          //   background-color: $clr1;
-          //   color: $clr5;
-          opacity: 0.7;
+        .delete-permanently {
+            margin-block-end: 24px;
+            font-family: f-bold;
+            text-decoration: underline;
         }
-      }
-      .decline-delete {
-        color: $clr5;
-        background-color: $clr12;
-        &:hover {
-          //   background-color: $clr1;
-          //   color: $clr5;
-          opacity: 0.7;
+        p {
+            margin-bottom: 25px;
         }
-      }
+
+        position: absolute;
+        left: 50%;
+        top: 20%;
+        transform: translate(-50%, 0);
+        z-index: 10;
+        color: $clr4;
+        padding: 30px;
+        background-color: $clr5;
+        border: 3px solid $clr1;
+        border-radius: 8px;
+        div {
+            justify-content: space-around;
+            .confirm-delete,
+            .decline-delete {
+                // width: 80px;
+                text-align: center;
+                font-family: f-medium;
+                cursor: pointer;
+                border-radius: 4px;
+                padding: 7px 40px;
+                background-color: $clr1;
+                color: $clr5;
+                &:hover {
+                    //   background-color: $clr1;
+                    //   color: $clr5;
+                    opacity: 0.7;
+                }
+            }
+            .decline-delete {
+                color: $clr5;
+                background-color: $clr12;
+                &:hover {
+                    //   background-color: $clr1;
+                    //   color: $clr5;
+                    opacity: 0.7;
+                }
+            }
+        }
     }
-  }
 }
