--- a/src/assest/styles/components/review-list/review-list.scss
+++ b/src/assest/styles/components/review-list/review-list.scss
@@ -1,10 +1,11 @@
 .review-list {
   margin: 20px 0px;
   .review-list-header {
-    font-size: rem(18px);
-    font-family: f-light;
     display: flex;
     gap: 10px;
+    h3 {
+      font-size: rem(22px);
+    }
     img {
       width: 18px;
       filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg)
