--- a/src/assest/styles/components/review-preview/_review-preview.scss
+++ b/src/assest/styles/components/review-preview/_review-preview.scss
@@ -16,9 +16,11 @@
         .review-by-content {
             flex-direction: column;
             justify-content: center;
-            p{
-                line-height: 24px;
-            }
+        }
+    }
+    .review-content{
+        p{
+            line-height: 24px;
         }
     }
 }
