--- a/src/assest/styles/pages/_stay-details.scss
+++ b/src/assest/styles/pages/_stay-details.scss
@@ -19,8 +19,8 @@
         flex-wrap: wrap;
         justify-content: flex-start;
         align-items: center;
-        @include for-normal-layout{
-          flex-wrap:nowrap;
+        @include for-normal-layout {
+          flex-wrap: nowrap;
           justify-content: center;
         }
         span {
@@ -43,8 +43,8 @@
       color: $clr2;
       font-family: f-medium;
       font-size: rem(14px);
-      flex-direction: column; 
-      @include for-narrow-layout{
+      flex-direction: column;
+      @include for-narrow-layout {
         flex-direction: row;
       }
       .summary-share {
@@ -123,8 +123,8 @@
     box-shadow: 0 1px 0 #e2e2e2;
     padding-block-end: 56px;
     gap: 4px;
-    @include for-narrow-layout{
-      gap:0px;
+    @include for-narrow-layout {
+      gap: 0px;
     }
     .info {
       width: 0;
@@ -274,7 +274,8 @@
     }
   }
   .share-modal {
-    font-size: 26px !important;
+    // flex-wrap: wrap;
+    font-size: 16px !important;
     font-family: f-light;
     font-weight: 600 !important;
     position: absolute;
@@ -289,18 +290,38 @@
     // border: 2px solid $clr1;
     border-radius: 8px;
     align-items: center;
+    @include for-tablet-layout {
+      font-size: 26px !important;
+    }
+
     .share-name {
+      display: flex;
+      // flex-wrap: wrap;
       margin-block-end: 40px;
     }
     .share-address {
-      font-size: 16px;
+      display: flex;
+      // flex-wrap: wrap;
+      font-size: 14px;
       font-weight: unset;
       align-items: center;
+      justify-content: center;
+      width: 100%;
+      text-overflow: ellipsis;
+      @include for-tablet-layout {
+        font-size: 16px;
+      }
     }
     .share-image-preview {
+      display: flex;
+      // flex-wrap: wrap;
       margin-block-end: 40px;
+      align-items: center;
+      justify-content: center;
     }
     img {
+      display: flex;
+      // flex-wrap: wrap;
       height: 64px;
       width: 64px;
       margin-inline-end: 10px;
@@ -308,15 +329,31 @@
       justify-content: center;
     }
     .share-container {
+      display: flex;
+      // flex-wrap: wrap;
+      flex-direction: column;
       // margin-block-start: 25px;
+      @include for-tablet-layout {
+        flex-direction: row;
+      }
       .share {
         align-items: center;
-        width: 280px;
         font-family: f-light !important;
-        font-size: 16px !important;
-        padding: 15px !important;
+        font-size: 14px !important;
+        padding: 8px !important;
         border: 1px solid $clr11 !important;
         border-radius: 8px !important;
+        @include for-normal-layout {
+          flex-direction: row;
+          // flex-wrap: nowrap;
+        }
+        @include for-large-layout {
+          padding: 15px !important;
+          font-size: 16px !important;
+          // display: flex;
+          // flex-wrap: wrap;
+          width: 280px;
+        }
         &:hover {
           background-color: $clr6 !important;
           border: 1px solid $clr11 !important;
