--- a/src/assest/styles/components/stay-details/stay-reserve.scss
+++ b/src/assest/styles/components/stay-details/stay-reserve.scss
@@ -68,7 +68,7 @@
   flex-direction: column;
   gap: 5px;
   padding: 7px 12px;
-  z-index: -99999999;
+  // z-index: -99999999;
   &:last-of-type {
     border-top: 1px solid #00000050;
   }
