--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -40,3 +40,4 @@
 @import "pages/orders-page/orders-page.scss";
 @import "pages/host-page.scss";
 @import "pages/wishlist.scss";
+@import "pages/admin-page.scss";
